# server/common/api.yml
@@ -11,6 +11,140 @@ tags:
 - name: Specification
   description: The swagger API specification
 paths:
+
+
+  /users:
+    get:
+      tags:
+      - Examples
+      description: Fetch all examples
+      parameters:
+        - name: id
+          in: query
+          description: The id of the example to retrieve
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Returns all examples
+          content: {}
+          
+    post:
+      tags:
+      - Examples
+      description: Fetch all examples
+      requestBody:
+        description: an example
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserBody'
+        required: true
+      responses:
+        200:
+          description: Returns all examples
+          content: {}
+
+    delete:
+      tags:
+      - Examples
+      description: Fetch all examples
+      parameters:
+      - name: id
+        in: query
+        description: The id of the example to retrieve
+        required: true
+        schema:
+          type: string
+
+      responses:
+        200:
+          description: Returns all examples
+          content: {}
+    
+    patch:
+      tags:
+      - Examples
+      description: Fetch all examples
+      requestBody:
+        description: an example
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserPatchBody'
+        required: true
+      responses:
+        200:
+          description: Returns all examples
+          content: {}
+  
+  /stories:
+    post:
+      tags:
+      - Examples
+      description: Fetch all examples
+      requestBody:
+        description: an example
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StoryBody'
+        required: true
+      responses:
+        200:
+          description: Returns all examples
+          content: {}
+    get:
+      tags:
+      - Examples
+      description: Fetch all examples
+      parameters:
+        - name: id
+          in: query
+          description: The id of the example to retrieve
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Returns all examples
+          content: {}
+    delete:
+      tags:
+      - Examples
+      description: Fetch all examples
+      parameters:
+      - name: id
+        in: query
+        description: The id of the example to retrieve
+        required: true
+        schema:
+          type: string
+      responses:
+        200:
+          description: Returns all examples
+          content: {}
+
+    patch:
+      tags:
+      - Examples
+      description: Fetch all examples
+      requestBody:
+        description: an example
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StoryPatchBody'
+        required: true
+      responses:
+        200:
+          description: Returns all examples
+          content: {}
+
+  
+
+    
   /examples:
     get:
       tags:
@@ -61,6 +195,7 @@ paths:
         200:
           description: Return the API specification
           content: {}
+
 components:
   schemas:
     ExampleBody:
@@ -72,3 +207,55 @@ components:
         name:
           type: string
           example: no_stress
+
+    UserBody:
+      title: user
+      required:
+      - username
+      - password
+      - email
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+        email:
+          type: string
+
+    UserPatchBody:
+      title: user
+      required:
+      - id
+      type: object
+      properties:
+        id:
+          type: string
+
+    StoryPatchBody:
+      title: story
+      required:
+      - id
+      type: object
+      properties:
+        id:
+          type: string
+    
+    StoryBody:
+      title: story
+      required:
+      - title
+      - type
+      - details
+      - owner
+      type: object
+      properties:
+        title:
+          type : string
+        type: 
+          type: string
+        password:
+          type: string
+        email:
+          type: string
+
